compiler/test-data/parser/theme/errors/missing_theme_name.frel
module theme.errors.missing_theme_name

theme {
    padding : u32 = 16
}
